Bazı düzenlemeler yapıldı. Yazılar yok !

--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -5,7 +5,7 @@
 }
 /* Projects Photo */
 .project1{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Project+one');
+    background-image: url(C:\Users\Baris\Desktop\a\bitirme_web2\src\yatayeng-01_0.png);
     cursor: none;    
 }
 .project2{
