--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -6,30 +6,30 @@
 /* Projects Photo */
 .project1{
     background-image: url(C:\Users\Baris\Desktop\a\bitirme_web2\src\yatayeng-01_0.png);
-    cursor: none;    
+    cursor: auto;    
 }
 .project2{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Project+two');
-    cursor: none;
+    background-image: url(C:\Users\Baris\Desktop\a\bitirme_web2\src\comingSoon.png);
+    cursor: auto;
 }
 .project3{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Project+three');
-    cursor: none;
+    background-image: url(C:\Users\Baris\Desktop\a\bitirme_web2\src\comingSoon.png);
+    cursor: auto;
 }
 .project4{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Project+four');
-    cursor: none;
+    background-image: url(C:\Users\Baris\Desktop\a\bitirme_web2\src\pngegg.png);
+    cursor: auto;
 }
 .project5{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Project+five');
-    cursor: none;
+    background-image: url(C:\Users\Baris\Desktop\a\bitirme_web2\src\pngegg.png);
+    cursor: auto;
 }
 .project6{
     background-image: url('https://via.placeholder.com/400x600.png?text=Project+six');
-    cursor: none;
+    cursor: auto; /*none dı*/
 }
 /* Miscelaneous Activities photo */
-.misc1{
+/*.misc1{
     background-image: url('https://via.placeholder.com/400x600.png?text=Miscellaneous+one');
     cursor: none;
 }
@@ -41,3 +41,4 @@
     background-image: url('https://via.placeholder.com/400x600.png?text=Miscellaneous+three');
     cursor: none;
 }
+*/
