--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -1,8 +1,13 @@
 
 /* Add your profile image here */
 .Photo{
-    background-image: url('https://c.tenor.com/pvFJwncehzIAAAAM/hello-there-private-from-penguins-of-madagascar.gif');
+    background-image: url('https://i.gifer.com/AD9T.gif');
 }
+
+.Phot{
+    background-image: url('https://c.tenor.com/0JAYbcXuPiQAAAAC/gary-tay-excuse-me-but-who-are-you.gif') ;
+}
+
 /* Projects Photo */
 .project1{
     background-image: url(C:\Users\Baris\Desktop\a\bitirme_web2\src\yatayeng-01_0.png);
@@ -17,7 +22,7 @@
     cursor: auto;
 }
 .project4{
-    background-image: url(C:\Users\Baris\Desktop\a\bitirme_web2\src\pngegg.png);
+    background-image: url(C:\Users\Baris\Desktop\a\bitirme_web2\src\comingSoon.png);
     cursor: auto;
 }
 .project5{
