--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -3,6 +3,9 @@
 .Photo{
     background-image: url('https://i.gifer.com/AD9T.gif');
 }
+.pho{
+    background-image: url('https://iserv.co.in/assets/images/blockchaingif.gif');
+}
 
 .Phot{
     background-image: url('https://c.tenor.com/0JAYbcXuPiQAAAAC/gary-tay-excuse-me-but-who-are-you.gif') ;
@@ -11,7 +14,8 @@
 /* Projects Photo */
 .project1{
     background-image: url('http://www.tedu.edu.tr/sites/default/files/content_files/yatayeng-01_0.png');
-    cursor: auto;    
+    cursor: auto;
+
 }
 .project2{
     background-image: url(https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/v351-kul-39a-equalizerbackground_2.jpg?w=1000&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=cf77153d08fcad4f349c8490330279da);
@@ -19,7 +23,6 @@
 }
 .project3{
     background-image: url(https://img.rawpixel.com/s3fs-private/rawpixel_images/website_content/v351-kul-39a-equalizerbackground_2.jpg?w=1000&dpr=1&fit=default&crop=default&q=65&vib=3&con=3&usm=15&bg=F4F4F3&ixlib=js-2.2.1&s=cf77153d08fcad4f349c8490330279da );
-    
     cursor: auto;
 }
 .project4{
