--- a/src/styles/images.css
+++ b/src/styles/images.css
@@ -34,7 +34,7 @@
     cursor: auto;
 }
 .project6{
-    background-image: url('https://via.placeholder.com/400x600.png?text=Project+six');
+    background-image: url('http://www.tedu.edu.tr/sites/default/files/content_files/yatayeng-01_0.png');
     cursor: auto; /*none dı*/
 }
 /* Miscelaneous Activities photo */
